--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,10 +7,10 @@
     }
   },
   "DB": {
-    "gearhost": ""
+    "gearhost": "server=den1.mysql6.gear.host;port=3306;database=keepr208;user id=keepr208;password=Sy21~easpw4_"
   },
   "Auth0": {
-    "Domain": "",
-    "Audience": ""
+    "Domain": "austin-idaho.auth0.com",
+    "Audience": "https://keepr"
   }
 }
