server is coming along

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "DB": {
-    "gearhost": "server=den1.mysql6.gear.host;port=3306;database=keepr208;user id=keepr208;password=Sy21~easpw4_"
+    "gearhost": "server=den1.mysql6.gear.host;port=3306;database=keepr208;user id=keepr208;password=Sy21~easpw4_; AllowUserVariables=True"
   },
   "Auth0": {
     "Domain": "austin-idaho.auth0.com",
