--- a/wwwsrc/package.json
+++ b/wwwsrc/package.json
@@ -10,6 +10,7 @@
     "@bcwdev/auth0-vue": "0.0.14",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "bootswatch": "^4.5.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.10",
