--- a/wwwsrc/package.json
+++ b/wwwsrc/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "@bcwdev/auth0-vue": "0.0.14",
+    "@popperjs/core": "^2.4.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootswatch": "^4.5.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.10",
+    "vue-dynamic-dropdown": "^1.0.12",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
